src/unpackaged/objects/Log__c.object
<CustomObject>
    <fields>
        <fullName>Class_Name__c</fullName>
        <description>Apex Class Name for which Log is Generated</description>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Log Message</description>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <description>Apex Method Name for which Log is Generated</description>
        <label>Method Name</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{0}</displayFormat>
        <label>Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>